--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
+    "lost": "^6.6.3",
     "node-notifier": "^4.4.0",
     "path": "^0.12.7",
     "postcss-import": "^7.1.3",
