--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "bemto.jade": "^0.2.2",
-    "browser-sync": "^2.10.1",
+    "browser-sync": "^2.11.0",
     "eslint": "^1.10.3",
-    "eslint-loader": "^1.1.1",
+    "eslint-loader": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
     "gulp-filter": "^3.0.1",
@@ -27,6 +27,8 @@
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-svg-sprite": "^1.2.17",
+    "gulp-svgmin": "^1.2.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "lost": "^6.6.3",
