--- a/.stylelintrc
+++ b/.stylelintrc
@@ -47,7 +47,7 @@
     "media-query-parentheses-space-inside": "never",
     "no-eol-whitespace": true,
     "no-missing-eof-newline": true,
-    "number-leading-zero": "always",
+    "number-leading-zero": null,
     "number-no-trailing-zeros": true,
     "number-zero-length-no-unit": true,
     "property-no-vendor-prefix": true,
