--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "eslint-loader": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
+    "gulp-data": "^1.2.1",
     "gulp-filter": "^3.0.1",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.4",
     "gulp-plumber": "^1.0.1",
     "gulp-postcss": "^6.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-rucksack": "^0.1.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svg-sprite": "^1.2.17",
     "gulp-svgmin": "^1.2.0",
@@ -34,6 +36,7 @@
     "lost": "^6.6.3",
     "node-notifier": "^4.4.0",
     "path": "^0.12.7",
+    "postcss-cssnext": "^2.3.0",
     "postcss-import": "^7.1.3",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
