--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "eslint-loader": "^1.2.0",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
-    "gulp-data": "^1.2.1",
     "gulp-filter": "^3.0.1",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.4",
@@ -33,6 +32,7 @@
     "gulp-svgmin": "^1.2.0",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
+    "jade-get-data": "^1.0.1",
     "lost": "^6.6.3",
     "node-notifier": "^4.4.0",
     "path": "^0.12.7",
