--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "path": "^0.12.7",
     "postcss-cssnext": "^2.4.0",
     "postcss-import": "^7.1.3",
+    "postcss-svg": "^1.0.4",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
     "source-map-loader": "^0.1.5",
