--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
-  "name": "essential",
+  "name": "portfolio",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
   "scripts": {
     "start": "gulp"
   },
@@ -11,13 +16,13 @@
   "devDependencies": {
     "autoprefixer": "^6.3.1",
     "babel-core": "^6.4.5",
-    "babel-eslint": "^5.0.0-beta6",
+    "babel-eslint": "^5.0.0-beta9",
     "babel-loader": "^6.2.1",
     "babel-preset-es2015": "^6.3.13",
     "bemto.jade": "^0.2.2",
     "browser-sync": "^2.11.1",
     "eslint": "^1.10.3",
-    "eslint-loader": "^1.2.0",
+    "eslint-loader": "^1.2.1",
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
     "gulp-filter": "^3.0.1",
@@ -33,7 +38,7 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "jade-get-data": "^1.0.1",
-    "lost": "^6.7.0",
+    "lost": "^6.7.1",
     "node-notifier": "^4.4.0",
     "path": "^0.12.7",
     "postcss-cssnext": "^2.4.0",
@@ -42,7 +47,7 @@
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
     "source-map-loader": "^0.1.5",
-    "webpack": "^1.12.11",
+    "webpack": "^1.12.12",
     "webpack-stream": "^3.1.0"
   }
 }
