--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp": "^3.9.0",
     "gulp-changed": "^1.3.0",
     "gulp-filter": "^3.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.4",
     "gulp-plumber": "^1.0.1",
