--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-cssnext": "^2.4.0",
     "postcss-import": "^7.1.3",
     "postcss-svg": "^1.0.4",
+    "postcss-svg-fragments": "^1.2.1",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
     "source-map-loader": "^0.1.5",
