--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
   "devDependencies": {
     "babel-cli": "^6.5.1",
     "babel-core": "^6.5.2",
-    "babel-eslint": "^5.0.0-beta9",
-    "babel-loader": "^6.2.2",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.3",
     "babel-preset-es2015": "^6.5.0",
     "bemto.jade": "^0.2.2",
     "browser-sync": "^2.11.1",
     "eslint": "^1.10.3",
-    "eslint-loader": "^1.2.1",
+    "eslint-loader": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-filter": "^3.0.1",
@@ -36,11 +36,11 @@
     "gulp-rucksack": "^0.1.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-svg-sprite": "^1.2.19",
-    "gulp-svgmin": "^1.2.1",
+    "gulp-svgmin": "^1.2.2",
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.5",
     "jade-get-data": "^1.0.1",
-    "lost": "^6.7.1",
+    "lost": "^6.7.2",
     "node-notifier": "^4.5.0",
     "path": "^0.12.7",
     "postcss-cssnext": "^2.4.0",
