--- a/.stylelintrc
+++ b/.stylelintrc
@@ -33,7 +33,7 @@
     "function-parentheses-newline-inside": "always-multi-line",
     "function-parentheses-space-inside": "never-single-line",
     "function-whitespace-after": "always",
-    "function-url-quotes": "double",
+    "function-url-quotes": "single",
     "indentation": 2,
     "max-empty-lines": 1,
     "media-feature-colon-space-after": "always",
