--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
     "eslint": "^1.10.3",
     "eslint-loader": "^1.3.0",
     "gulp": "^3.9.1",
+    "gulp-cached": "^1.1.0",
     "gulp-changed": "^1.3.0",
     "gulp-filter": "^3.0.1",
     "gulp-gh-pages": "^0.5.4",
+    "gulp-if": "^2.0.0",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.4",
+    "gulp-jsbeautifier": "^1.0.2",
     "gulp-plumber": "^1.1.0",
+    "gulp-plumber-error-handler": "^1.0.0",
     "gulp-postcss": "^6.1.0",
     "gulp-rename": "^1.2.2",
     "gulp-rucksack": "^0.1.2",
@@ -50,6 +54,7 @@
     "run-sequence": "^1.1.5",
     "source-map-loader": "^0.1.5",
     "webpack": "^1.12.13",
+    "webpack-stats-logger": "^1.0.1",
     "webpack-stream": "^3.1.0"
   }
 }
