--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
-    "bemto.jade": "^0.2.2",
+    "bemto.jade": "^1.0.2",
     "browser-sync": "^2.11.1",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.3.0",
@@ -48,7 +48,7 @@
     "node-notifier": "^4.5.0",
     "path": "^0.12.7",
     "postcss-cssnext": "^2.4.0",
-    "postcss-import": "^7.1.3",
+    "postcss-easy-import": "^1.0.1",
     "postcss-svg": "^1.0.4",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
