--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "path": "^0.12.7",
     "postcss-cssnext": "^2.4.0",
     "postcss-easy-import": "^1.0.1",
+    "postcss-inline-svg": "^1.3.2",
     "postcss-svg": "^1.0.4",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
