--- a/.stylelintrc
+++ b/.stylelintrc
@@ -33,7 +33,7 @@
     "function-parentheses-newline-inside": "always-multi-line",
     "function-parentheses-space-inside": "never-single-line",
     "function-whitespace-after": "always",
-    "function-url-quotes": "single",
+    "function-url-quotes": "double",
     "indentation": 2,
     "max-empty-lines": 1,
     "media-feature-colon-space-after": "always",
@@ -52,13 +52,11 @@
     "number-zero-length-no-unit": true,
     "property-no-vendor-prefix": true,
     "root-no-standard-properties": true,
-    "rule-no-shorthand-property-overrides": true,
     "rule-nested-empty-line-before": ["always-multi-line", {
       "except": ["first-nested"]
     }],
     "rule-non-nested-empty-line-before": "always-multi-line",
-    "rule-properties-order": null,
-    "rule-trailing-semicolon": "always",
+    "declaration-block-trailing-semicolon": "always",
     "selector-combinator-space-after": "always",
     "selector-combinator-space-before": "always",
     "selector-list-comma-newline-after": "always",
