--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-es2015": "^6.6.0",
     "bemto.jade": "^1.0.2",
     "browser-sync": "^2.11.1",
+    "cssnano": "^3.5.2",
     "eslint": "^1.10.3",
     "eslint-loader": "^1.3.0",
     "gulp": "^3.9.1",
@@ -32,7 +33,6 @@
     "gulp-if": "^2.0.0",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.4",
-    "gulp-jsbeautifier": "^1.0.2",
     "gulp-plumber": "^1.1.0",
     "gulp-plumber-error-handler": "^1.0.0",
     "gulp-postcss": "^6.1.0",
@@ -50,7 +50,6 @@
     "postcss-cssnext": "^2.4.0",
     "postcss-easy-import": "^1.0.1",
     "postcss-inline-svg": "^1.3.2",
-    "postcss-svg": "^1.0.4",
     "require-dir": "^0.3.0",
     "run-sequence": "^1.1.5",
     "source-map-loader": "^0.1.5",
