--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-filter": "^3.0.1",
     "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.4.0",
     "gulp-jade": "^1.1.0",
     "gulp-jade-inheritance": "^0.5.4",
     "gulp-plumber": "^1.1.0",
